@@ -1,0 +1,12 @@
+#ifndef __TSMTYPES_H__
+#define __TSMTYPES_H__
+
+typedef unsigned char	Uint8;
+typedef unsigned int	Uint16;
+typedef unsigned long	Uint32;
+
+typedef char		Sint8;
+typedef int		Sint16;
+typedef long		Sint32;
+
+#endif/*__TSMTYPES_H__*/
