@@ -1,4 +1,11 @@
 ==================================================================
+21/12-2014 EMWHBR
+
+*) R1A04
+
+*) Added information on howto install and test SDCC.
+
+==================================================================
 6/12-2014 EMWHBR
 
 *) R1A03
